26 julio backup antes de caelestia

--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,3 +1,4 @@
-preload = ~/.config/wallpapers/wallpaper3.jpg
-wallpaper = DP-1, ~/.config/wallpapers/wallpaper3.jpg
+preload = ~/.config/wallpapers/scaraWallpaper2.jpg
+wallpaper = DP-1, ~/.config/wallpapers/scaraWallpaper2.jpg
+wallpaper = HDMI-A-2, ~/.config/wallpapers/scaraWallpaper2.jpg
 
