--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -23,9 +23,8 @@
 ### MONITORS ###
 ################
 
-# See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,preferred,auto,auto
-
+monitor = DP-1, 1920x1080, 0x0, 1
+monitor = HDMI-A-2, 1920x1080, 1920x0, 1
 
 ###################
 ### MY PROGRAMS ###
@@ -34,9 +33,9 @@ monitor=,preferred,auto,auto
 # See https://wiki.hyprland.org/Configuring/Keywords/
 
 # Set programs that you use
-$terminal = alacritty
-$fileManager = dolphin
-$menu = rofi -show drun -show-icons
+$terminal = kitty
+$fileManager = kitty --class "Ranger" -e ranger 
+$menu = wofi --show=drun
 
 
 #################
@@ -47,23 +46,23 @@ $menu = rofi -show drun -show-icons
 # Or execute your favorite apps at launch like this:
 
 exec-once = $terminal
-exec-once = nm-applet &
+exec-once = nm-applet & waybar
 exec-once = clipse -listen
 exec-once = hyprpaper
 exec-once = systemctl --user start hyprpolkitagent
 exec-once = hypridle
 exec-once = [workspace 2 silent] firefox
-exec-once = [workspace 4] discord
-exec-once = [workspace 5] Spotify
+exec-once = [workspace 11] discord
+
+exec-once = hyprpm reload -n
 
 exec-once = gsettings set org.gnome.desktop.interface cursor-theme 'rose-pine-hyprcursor'
 exec-once = gsettings set org.gnome.desktop.interface cursor-size 24
 
+exec-once = swww ~/.config/wallpapers/planetaRosa.jpg
 
-# set dark theme on apps
 
-
-#############################
+############################
 ### ENVIRONMENT VARIABLES ###
 #############################
 
@@ -71,8 +70,8 @@ exec-once = gsettings set org.gnome.desktop.interface cursor-size 24
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
-env = HYPRCURSOR_THEME,rose-pine-hyprcursor
 env = XDG_MENU_PREFIX,arch-
+env = HYPRCURSOR_THEME,rose-pine-hyprcursor
 
 
 #####################
@@ -89,7 +88,7 @@ general {
     border_size = 2
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
+    col.active_border = rgba(a43ae8ee) rgba(e04af7aa) 45deg
     col.inactive_border = rgba(595959aa)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
@@ -103,11 +102,11 @@ general {
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
-    rounding = 10
+    rounding = 3
 
     # Change transparency of focused and unfocused windows
     active_opacity = 1.0
-    inactive_opacity = 0.80
+    inactive_opacity = 1.0
 
     shadow {
         enabled = true
@@ -206,6 +205,24 @@ device {
     sensitivity = -0.5
 }
 
+device {
+    name = my-keyboard-english
+    kb_layout= us 
+}
+device {
+    name = my-keyboard-spanish
+    kb_layout = latam
+}
+
+plugin {
+  split-monitor-workspaces {
+        count = 6
+        keep_focused = 1
+        enable_notifications = 1 
+        enable_persistent_workspaces = 1
+  }
+}
+
 
 ###################
 ### KEYBINDINGS ###
@@ -217,7 +234,8 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, RETURN, exec, $terminal
 bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, S, exec, grim -g "$(slurp)" | wl-copy
+
+#bind = $mainMod, S, exec, grim -g "$(slurp)" | wl-copy
 bind = $mainMod SHIFT, S, exec, grim -o DP-1
 bind = $mainMod, space, exec, $menu
 bind = $mainMod, V, exec, $terminal --class clipse -e 'clipse'
@@ -266,7 +284,9 @@ bind = $mainMod SHIFT, 0, movetoworkspace, 10
 bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
 bind = $mainMod CTRL, left, workspace, e-1
+bind = $mainMod, h, workspace, e-1
 bind = $mainMod CTRL, right, workspace, e+1
+bind = $mainMod, l, workspace, e+1
 bind = $mainMod, TAB, workspace, previous
 bind = $mainMod CTRL, down, workspace, empty
 bind = $mainMod, TAB, workspace, previous
@@ -307,9 +327,13 @@ windowrulev2 = suppressevent maximize, class:.*
 windowrulev2 = float,class:(clipse)
 windowrulev2 = size 400 415,class:(clipse)
 
-windowrulev2 = float,class:(com.saivert.pwvucontrol)
-windowrulev2 = size 600 300,class:(com.saivert.pwvucontrol)
-windowrulev2 = move 1313 42,class:(com.saivert.pwvucontrol)
+windowrulev2 = float,class:(ranger)
+windowrulev2 = size 1000 800,class:(ranger)
+
+windowrulev2 = float,class:(org.pulseaudio.pavucontrol)
+windowrulev2 = size 600 300,class:(org.pulseaudio.pavucontrol)
+windowrulev2 = move 1300 60,class:(org.pulseadio.pavucontrol)
+
 
 windowrulev2 = float,class:(wm-floating)
 windowrulev2 = size 1000 800,class:(wm-floating)
