--- a/sddm.conf
+++ b/sddm.conf
@@ -30,7 +30,7 @@ RebootCommand=
 
 [Theme]
 # Current theme name
-Current=sugar-dark
+Current=sddm-eucalyptus-drop-master
 
 # Cursor theme used in the greeter
 CursorTheme=breeze_cursors
